--- a/.github/workflows/linux_cuda_runtime.yaml
+++ b/.github/workflows/linux_cuda_runtime.yaml
@@ -1,63 +1,20 @@
-name: Linux (CUDA, runtime)
+ame: Linux (CUDA, runtime)
 
 on:
   schedule:
     - cron: "00 7 * * *" # runs at 07:00 UTC/12:00 PST every day
   workflow_dispatch:
-    inputs:
-      version:
-        description: "latest/stable/semver/branch"
-        required: true
-        default: "latest"
-        type: string
 
 jobs:
-  docker:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -e {0} # -e to fail on error
-
+  build:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
-        cuda-version: ["11"]
+        python: ["3.9", "3.10", "3.11"]
+        cuda: ["11"]
+        version: ["latest"]
+        dependencies: ["", "dev", "test"]
 
-    steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    uses: ./.github/workflows/linux_cuda.yaml
 
-      - name: Set default inputs
-        id: defaults
-        run: |
-          INPUT_VERSION=${{ inputs.version }}
-          VERSION=${INPUT_VERSION:-"latest"}
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
-
-          RELEASE_BRANCH_REGEX="([0-9]+\.){2}(x)"
-          if [[ $VERSION == "latest" ]]; then
-            TARGET="latest"
-          elif [[ $VERSION == "stable" ]]; then
-            TARGET="stable"
-          elif [[ $VERSION =~ $RELEASE_BRANCH_REGEX ]]; then
-            TARGET="branch"
-          else
-            TARGET="semver"
-          fi
-          echo "target=${TARGET}" >> $GITHUB_OUTPUT
-
-      - uses: docker/build-push-action@v5
-        with:
-          context: ./docker/linux
-          push: true
-          target: ${{ steps.defaults.outputs.target }}
-          tags: scverse/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-runtime-${{ steps.defaults.outputs.version }}
-          build-args: |
-            PYTHON_VERSION=${{ matrix.python-version }}
-            CUDA_VERSION=${{ matrix.cuda-version }}
-            SCVI_TOOLS_VERSION=${{ steps.defaults.outputs.version }}
+    secrets: inherit
