--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,6 +32,8 @@ ENV PATH "/env/bin:$PATH"
 
 ARG PYTHON_VERSION=3.11
 ARG CUDA_VERSION=11
+ENV PYTHON_VERSION=${PYTHON_VERSION}
+ENV CUDA_VERSION=${CUDA_VERSION}
 FROM scverse/scvi-tools:py${PYTHON_VERSION}-cu${CUDA_VERSION}-base AS base
 
 FROM base AS latest
