--- a/.github/workflows/linux_cuda_latest_scheduled.yaml
+++ b/.github/workflows/linux_cuda_latest_scheduled.yaml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         python: ["3.9", "3.10", "3.11"]
-        cuda: ["11"]
+        cuda: ["11", "12"]
         version: ["latest"]
         dependencies: ["", "dev", "test"]
 
