--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM condaforge/mambaforge:latest AS mamba
+FROM condaforge/miniforge3:latest AS conda
 
 ARG PYTHON_VERSION=3.11
 RUN mamba create --copy -y -p /env \
@@ -6,17 +6,10 @@ RUN mamba create --copy -y -p /env \
     mamba clean -ayf
 
 ARG CUDA_VERSION=11
-RUN mamba install -y -p /env \
-    pytorch torchvision torchaudio pytorch-cuda=${CUDA_VERSION} cuda-nvcc=${CUDA_VERSION} \
-    -c pytorch -c nvidia -c conda-forge && \
+RUN CONDA_OVERRIDE_CUDA=${CUDA_VERSION} mamba install -y -p /env \
+    pytorch torchvision torchaudio pytorch-cuda=${CUDA_VERSION} \
+    jaxlib=*=*cuda* jax cuda-nvcc -c pytorch -c conda-forge -c nvidia && \
     mamba clean -ayf
-
-ARG CUDA_VERSION=11
-RUN mamba run -p /env \
-    python -m pip install --no-cache-dir --upgrade \
-    jax[cuda${CUDA_VERSION}_pip] -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html && \
-    mamba run -p /env \
-    python -m pip cache purge
 
 RUN mamba install -y -p /env \
     git -c anaconda && \
@@ -27,39 +20,31 @@ RUN mamba install -y -p /env \
     mamba clean -ayf
 
 FROM ubuntu:latest AS cuda
-COPY --from=mamba /env /env
+COPY --from=conda /env /env
 ENV PATH "/env/bin:$PATH"
 
 ARG PYTHON_VERSION=3.11
 ARG CUDA_VERSION=11
-ENV PYTHON_VERSION=${PYTHON_VERSION}
-ENV CUDA_VERSION=${CUDA_VERSION}
 FROM scverse/scvi-tools:py${PYTHON_VERSION}-cu${CUDA_VERSION}-base AS base
 
 FROM base AS latest
 ARG DEPENDENCIES=""
-ENV DEPENDENCIES=${DEPENDENCIES}
 RUN pip install --no-cache-dir "scvi-tools[${DEPENDENCIES}] @ git+https://github.com/scverse/scvi-tools" && \
     pip cache purge
 
 FROM base AS stable
 ARG DEPENDENCIES=""
-ENV DEPENDENCIES=${DEPENDENCIES}
 RUN pip install -U --no-cache-dir "scvi-tools[${DEPENDENCIES}]" && \
     pip cache purge
 
 FROM base AS branch
 ARG SCVI_TOOLS_VERSION=main
 ARG DEPENDENCIES=""
-ENV SCVI_TOOLS_VERSION=${SCVI_TOOLS_VERSION}
-ENV DEPENDENCIES=${DEPENDENCIES}
 RUN pip install --no-cache-dir "scvi-tools[${DEPENDENCIES}] @ git+https://github.com/scverse/scvi-tools@${SCVI_TOOLS_VERSION}" && \
     pip cache purge
 
 FROM base AS semver
 ARG SCVI_TOOLS_VERSION=latest
 ARG DEPENDENCIES=""
-ENV SCVI_TOOLS_VERSION=${SCVI_TOOLS_VERSION}
-ENV DEPENDENCIES=${DEPENDENCIES}
 RUN pip install --no-cache-dir "scvi-tools[${DEPENDENCIES}]==${SCVI_TOOLS_VERSION}" && \
     pip cache purge
