--- a/.github/workflows/linux_cuda_base.yaml
+++ b/.github/workflows/linux_cuda_base.yaml
@@ -6,37 +6,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  docker:
-    runs-on: [self-hosted, Linux, X64, CUDA]
-
-    container:
-      image: ubuntu:22.04
-      options: --user root --gpus all
-
-    defaults:
-      run:
-        shell: bash -e {0} # -e to fail on error
-
+  build:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
-        cuda-version: ["11"]
+        python: ["3.9", "3.10", "3.11"]
+        cuda: ["11", "12"]
+        version: ["cuda"]
+        dependencies: ["base"]
 
-    steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    uses: ./.github/workflows/linux_cuda.yaml
+    with:
+      python: ${{ matrix.python }}
+      cuda: ${{ matrix.cuda }}
+      version: ${{ matrix.version }}
+      dependencies: ${{ matrix.dependencies }}
 
-      - uses: docker/build-push-action@v5
-        with:
-          context: ./docker
-          push: true
-          target: cuda
-          tags: scverse/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-base
-          build-args: |
-            PYTHON_VERSION=${{ matrix.python-version }}
-            CUDA_VERSION=${{ matrix.cuda-version }}
+    secrets: inherit
