--- a/.github/workflows/linux_cuda.yaml
+++ b/.github/workflows/linux_cuda.yaml
@@ -65,12 +65,16 @@ jobs:
           fi
           echo "target=${TARGET}" >> $GITHUB_OUTPUT
 
+          INPUT_DEPENDENCIES=${{ inputs.dependencies }}
+          DEPENDENCIES=${INPUT_DEPENDENCIES:-"runtime"}
+          echo "dependencies=${DEPENDENCIES}" >> $GITHUB_OUTPUT
+
       - uses: docker/build-push-action@v5
         with:
           context: ./docker
           push: true
           target: ${{ steps.build.outputs.target }}
-          tags: scverse/scvi-tools:py${{ inputs.python }}-cu${{ inputs.cuda }}-${{ inputs.dependencies }}${{ steps.build.outputs.versiontag }}
+          tags: scverse/scvi-tools:py${{ inputs.python }}-cu${{ inputs.cuda }}-${{ steps.build.outputs.dependencies }}${{ steps.build.outputs.versiontag }}
           build-args: |
             PYTHON_VERSION=${{ inputs.python }}
             CUDA_VERSION=${{ inputs.cuda }}
