Update versioning and README

--- a/.github/workflows/linux_cuda.yaml
+++ b/.github/workflows/linux_cuda.yaml
@@ -59,7 +59,7 @@ jobs:
           elif [[ $VERSION =~ $RELEASE_BRANCH_REGEX ]]; then
             TARGET="branch"
           elif [[ $VERSION == "cuda" ]]; then
-            TARGET="cuda"
+            TARGET="base"
           else
             TARGET="semver"
           fi
