--- a/.github/workflows/linux_cuda_release.yaml
+++ b/.github/workflows/linux_cuda_release.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "latest/stable/semver/branch"
+        description: "semver"
         required: true
         default: "latest"
         type: string
@@ -15,18 +15,36 @@ on:
         type: string
 
 jobs:
-  build:
+  build-semver:
     strategy:
       fail-fast: false
       matrix:
         python: ["3.9", "3.10", "3.11"]
         cuda: ["11", "12"]
+        dependencies: ["", "dev", "tutorials"]
 
     uses: ./.github/workflows/linux_cuda.yaml
     with:
       python: ${{ matrix.python }}
       cuda: ${{ matrix.cuda }}
       version: ${{ inputs.version }}
-      dependencies: ${{ inputs.dependencies }}
+      dependencies: ${{ matrix.dependencies }}
+
+    secrets: inherit
+
+  build-stable:
+    strategy:
+      fail-fast: false
+      matrix:
+        python: ["3.9", "3.10", "3.11"]
+        cuda: ["11", "12"]
+        dependencies: ["", "dev", "tutorials"]
+
+    uses: ./.github/workflows/linux_cuda.yaml
+    with:
+      python: ${{ matrix.python }}
+      cuda: ${{ matrix.cuda }}
+      version: stable
+      dependencies: ${{ matrix.dependencies }}
 
     secrets: inherit
